--- a/clientside/src/main.css
+++ b/clientside/src/main.css
@@ -35,12 +35,19 @@ a:not([href]):not([tabindex]):hover {
 .loginForm {
   margin-top: 10%;
 }
-
+.text-muted{
+  font-size: 13px;
+}
 .buttonDIV {
   margin-top: 1%;
   margin: 1%;
 }
-
+.loginAlert {
+  position: relative;
+  padding: 0.15rem 1.25rem;
+  border: 1px solid transparent;
+  border-radius: 0;
+}
 .cr-sidebar--open {
   background: #884747;
 }
@@ -58,6 +65,10 @@ a:not([href]):not([tabindex]):hover {
   padding-left: 4px;
   transition: 0.3s;
 }
+.forget{
+  margin-bottom: 0;
+}
+
 .cr-sidebar .nav .nav-item {
   margin-left: -2px;
   margin-right: 2px;
@@ -71,7 +82,7 @@ a:not([href]):not([tabindex]):hover {
   color: #007bff;
   border-color: #323436;
 }
-.img-small{
+.img-small {
   border-radius: 50px;
 }
 .bg-gradient-theme {
@@ -87,6 +98,7 @@ a:not([href]):not([tabindex]):hover {
   color: black;
   text-decoration: none;
 }
-.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
   border-bottom: 3px solid #4f62c0;
 }
