--- a/clientside/src/main.css
+++ b/clientside/src/main.css
@@ -102,3 +102,11 @@ a:not([href]):not([tabindex]):hover {
 .nav-tabs .nav-item.show .nav-link {
   border-bottom: 3px solid #4f62c0;
 }
+
+.profileImageSmall{
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
+  margin-left: 0px;
+  border-radius: 50px;
+}
