--- a/clientside/src/components/ViewPDF/ViewPDF.css
+++ b/clientside/src/components/ViewPDF/ViewPDF.css
@@ -13,4 +13,7 @@
   
   .react-pdf__Page__canvas {
     margin: 0 auto;
+    height: fit-content!important;
+    width: 100%!important;
+    overflow-y: scroll;
   }
