use authState.memberId to access member Id in course related components and change css in ViewPDF.js

--- a/clientside/src/components/ViewPDF/ViewPDF.css
+++ b/clientside/src/components/ViewPDF/ViewPDF.css
@@ -5,6 +5,8 @@
     border: 1px solid darkgrey;
     box-shadow: 5px 5px 5px 1px #ccc;
     border-radius: 5px;
+    width: fit-content !important;
+    height: 0% !important;
   }
   
   .react-pdf__Page__annotations.annotationLayer {
