--- a/clientside/src/main.css
+++ b/clientside/src/main.css
@@ -123,6 +123,8 @@ a:not([href]):not([tabindex]):hover {
   border: 1px solid darkgrey;
   box-shadow: 5px 5px 5px 1px #ccc;
   border-radius: 5px;
+  width: fit-content !important;
+  height: 0% !important;
 }
 
 .react-pdf__Page__annotations.annotationLayer {
