--- a/clientside/src/pages/dashboards/calender.css
+++ b/clientside/src/pages/dashboards/calender.css
@@ -113,7 +113,8 @@
 }
 
 .react-calendar__tile--now {
-    background: #ffff76;
+    background: #585858;
+    color: white;
 }
 
 .react-calendar__tile--now:enabled:hover,
@@ -131,8 +132,8 @@
 }
 
 .react-calendar__tile--active {
-    background: #585858;
-    color: white;
+    background: #fafa25;
+    color: black;
 }
 
 .react-calendar__tile--active:enabled:hover,
@@ -145,7 +146,7 @@
 }
 
 .activityOverColor {
-    background: #f3b3aa;
+    background: #fa9689;
 }
 
 .activityColor {
