--- a/clientside/src/pages/dashboards/calender.css
+++ b/clientside/src/pages/dashboards/calender.css
@@ -146,9 +146,9 @@
 }
 
 .activityOverColor {
-    background: #fa9689;
+    background: #6af56a;
 }
 
 .activityColor {
-    background: #a7f8a7;
+    background: #fa9689;
 }
